--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,46 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #c5a66c !important;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #b9acac;
-
+  background-color: #c5a66c;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  text-decoration: none;
-}
-a:visited {
-  text-decoration: none;
+#root {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #c5a66c;
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   min-height: 100vh;
+  background-color: #c5a66c;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
