--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@ html,
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 100vw;
   background-color: #c5a66c !important;
+  overflow-x: hidden;
 }
 
 :root {
